force-app/main/default/objects/Location_Address_Book__c/Location_Address_Book__c.object-meta.xml
<CustomObject>
    <label>Location (Address Book)</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Street</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations (Address Book)</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>