force-app/main/default/objects/Location_Address_Book__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Nepal</fullName>
            </value>
            <value>
                <fullName>Iran</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>