force-app/main/default/objects/Location_Address_Book__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <description>Enter your Landmark</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Give Information about your Landmark, Enter your Landmark</inlineHelpText>
    <label>Landmark</label>
    <length>20</length>
    <type>Text</type>
</CustomField>