force-app/main/default/objects/Location_Address_Book__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Enter the State</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provides the information about State</inlineHelpText>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>